--- a/asgn0/asgn0.html
+++ b/asgn0/asgn0.html
@@ -11,5 +11,23 @@ Please use a browser that supports "canvas"
 </canvas>
 <script src="asgn0.js"></script>
 <script src='./lib/cuon-matrix.js'></script>
+
+<!-- v1 -->
+<div>
+    <label for="v1-x-coordinate">v1: x</label>
+    <input type="number"  id="v1-x-coordinate" >
+    <label for="v1-y-coordinate">y</label>
+    <input type="number"  id="v1-y-coordinate">
+</div>
+<!-- v2 -->
+<div>
+    <label for="v2-x-coordinate">v2: x</label>
+    <input type="number"  id="v2-x-coordinate" >
+    <label for="v2-y-coordinate">y</label>
+    <input type="number"  id="v2-y-coordinate">
+</div>
+<br>
+<input type="button" value="draw!" onclick="handleDrawEvent()">
+
 </body>
 </html>
