--- a/asgn0/asgn0.html
+++ b/asgn0/asgn0.html
@@ -13,21 +13,33 @@ Please use a browser that supports "canvas"
 <script src='./lib/cuon-matrix.js'></script>
 
 <!-- v1 -->
-<div>
-    <label for="v1-x-coordinate">v1: x</label>
-    <input type="number"  id="v1-x-coordinate" >
-    <label for="v1-y-coordinate">y</label>
-    <input type="number"  id="v1-y-coordinate">
-</div>
+<br>
+<label for="v1-x-coordinate">v1: x</label>
+<input type="number"  id="v1-x-coordinate">
+<label for="v1-y-coordinate">y</label>
+<input type="number"  id="v1-y-coordinate">
+<br>
+
 <!-- v2 -->
-<div>
-    <label for="v2-x-coordinate">v2: x</label>
-    <input type="number"  id="v2-x-coordinate" >
-    <label for="v2-y-coordinate">y</label>
-    <input type="number"  id="v2-y-coordinate">
-</div>
+<label for="v2-x-coordinate">v2: x</label>
+<input type="number"  id="v2-x-coordinate" >
+<label for="v2-y-coordinate">y</label>
+<input type="number"  id="v2-y-coordinate">
 <br>
 <input type="button" value="draw!" onclick="handleDrawEvent()">
+<br><br>
+<!-- mathing -->
+<label for="operation">Operation: </label>
+<select type="select"  id="operation" >
+    <option value="add">Add</option>
+    <option value="subtract">Subtract</option>
+    <option value="multiply">Multiply</option>
+    <option value="divide">Divide</option>
+</select>
+<label for="scalar"> Scalar: </label>
+<input type="number"  id="scalar">
+<br>
+<input type="button" value="draw!" onclick=" handleDrawOperationEvent()">
 
 </body>
 </html>
