--- a/asgn0/asgn0.html
+++ b/asgn0/asgn0.html
@@ -35,6 +35,8 @@ Please use a browser that supports "canvas"
     <option value="subtract">Subtract</option>
     <option value="multiply">Multiply</option>
     <option value="divide">Divide</option>
+    <option value="magnitude">Magnitude</option>
+    <option value="normalize">Normalize</option>
 </select>
 <label for="scalar"> Scalar: </label>
 <input type="number"  id="scalar">
