dot multiplication and converting radian to angle

--- a/asgn0/asgn0.html
+++ b/asgn0/asgn0.html
@@ -35,6 +35,7 @@ Please use a browser that supports "canvas"
     <option value="subtract">Subtract</option>
     <option value="multiply">Multiply</option>
     <option value="divide">Divide</option>
+    <option value="dot">Angle Between</option>
     <option value="magnitude">Magnitude</option>
     <option value="normalize">Normalize</option>
 </select>
