area calculation and passes all tests

--- a/asgn0/asgn0.html
+++ b/asgn0/asgn0.html
@@ -10,7 +10,7 @@
 Please use a browser that supports "canvas"
 </canvas>
 <script src="asgn0.js"></script>
-<script src='./lib/cuon-matrix.js'></script>
+<script src='./lib/cuon-matrix-cse160.js'></script>
 
 <!-- v1 -->
 <br>
@@ -36,6 +36,7 @@ Please use a browser that supports "canvas"
     <option value="multiply">Multiply</option>
     <option value="divide">Divide</option>
     <option value="dot">Angle Between</option>
+    <option value="area">Area</option>
     <option value="magnitude">Magnitude</option>
     <option value="normalize">Normalize</option>
 </select>
