--- a/asgn0/asgn0.html
+++ b/asgn0/asgn0.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <title>Draw a blue rectangle (canvas version)</title>
+<style>
+</style>
 </head>
 
 <body onload="main()">
-<canvas id="example" width="400" height="400">
+<canvas id="example" width="400" height="400" >
 Please use a browser that supports "canvas"
 </canvas>
+
 <script src="asgn0.js"></script>
 <script src='./lib/cuon-matrix-cse160.js'></script>
 
