--- a/asgn1/webgl/asgn1.html
+++ b/asgn1/webgl/asgn1.html
@@ -21,6 +21,10 @@
     <br>
     Blue <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" />
 
+    <!-- size -->
+    <br>
+    Size <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" />
+
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
