--- a/asgn1/webgl/asgn1.html
+++ b/asgn1/webgl/asgn1.html
@@ -29,5 +29,6 @@
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
     <script src="asgn1.js"></script>
+    <script src="point.js"></script>
   </body>
 </html>
