--- a/asgn1/webgl/asgn1.html
+++ b/asgn1/webgl/asgn1.html
@@ -13,6 +13,9 @@
     <button type = "button" id="green">Green</button>
     <button type = "button" id="red">Red</button>
 
+    <!-- clear -->
+    <button type = "button" id="clear">Clear</button>
+
     <!-- slider -->
     <br>
     Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide" />
