--- a/asgn1/webgl/asgn1.html
+++ b/asgn1/webgl/asgn1.html
@@ -3,35 +3,72 @@
   <head>
     <meta charset="utf-8" />
     <title>Draw a point (1)</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="asgn1.css">
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="400" height="400">
-    Please use a browser that supports "canvas"
-    </canvas>
+    <h1>Assignment 1: Painting Program</h1>
     <br>
-    <button type = "button" id="green">Green</button>
-    <button type = "button" id="red">Red</button>
-
+    <div id="webgl-container">
+        <canvas id="webgl" width="400" height="400">
+        Please use a browser that supports "canvas"
+        </canvas>
+    </div>
     <!-- clear -->
-    <button type = "button" id="clear">Clear</button>
+    <!-- <br>
+    <button type = "button" id="clear">Clear Canvas</button> -->
+
+    <!-- button type -->
+    <div>
+        Drawing Mode:
+        <br>
+        <button type = "button" id="pointButton">Point</button>
+        <button type = "button" id="triButton">Triangle</button>
+        <button type = "button" id="circleButton">Circle</button>
+    </div>
 
     <!-- slider -->
-    <br>
-    Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide" />
-    <br>
-    Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" />
-    <br>
-    Blue <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" />
+    <div>
+        <br><br>
+        Shape Color:
+        <br>
+        Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide" />
+        Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" />
+        Blue <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" />
+    
+        <!-- size -->
+        <br>
+        Shape Size: <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" />
+        (Circle) Segment Count: <input type="range" min="1" max="100" value="10" class="slider" id="segmentSlide" />
+    </div>
 
-    <!-- size -->
-    <br>
-    Size <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" />
-
+    <!-- clear button -->
+    <br><br><br><br>
+    <a href="#" class="button button--piyo" id="clear">
+        <div class="button__wrapper">
+            <span class="button__text">Clear</span>
+        </div>
+        <div class="characterBox">
+            <div class="character wakeup">
+                <div class="character__face"></div>
+            </div>
+            <div class="character wakeup">
+                <div class="character__face"></div>
+            </div>
+            <div class="character">
+                <div class="character__face"></div>
+            </div>
+        </div>
+    </a>
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
     <script src="asgn1.js"></script>
     <script src="point.js"></script>
+    <script src="triangle.js"></script>
+    <script src="circle.js"></script>
   </body>
 </html>
