--- a/asgn1/webgl/asgn1.html
+++ b/asgn1/webgl/asgn1.html
@@ -25,22 +25,25 @@
         <button type = "button" id="pointButton" class="button-23">⬛ Point</button>
         <button type = "button" id="triButton" class="button-23">▲ Triangle</button>
         <button type = "button" id="circleButton" class="button-23">⚫ Circle</button>
+        <button type = "button" id="duckyButton" class="button-23">🐥 Duck</button>
     </div>
 
     <!-- slider -->
     <div>
         <br>
         Shape Color:
-        <br>
-        Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide" />
-        Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" />
-        Blue <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" />
-    
+        <p>
+            ❤️Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide" />
+            💚Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" />
+            💙Blue <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" />
+        </p>
         <!-- size -->
         <br>
-        Shape Size: <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" />
-        (Circle) Segment Count: <input type="range" min="3" max="20" value="10" class="slider" id="segmentSlide" />
-        <span id="segmentValue">10</span> 
+        Shape Size: 
+        <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" />
+        (Circle) Segment Count: 
+        <span id="segmentValue">10</span>
+        <input type="range" min="3" max="20" value="10" class="slider" id="segmentSlide" />
     </div>
 
     <!-- clear button -->
