--- a/asgn1/asgn1.html
+++ b/asgn1/asgn1.html
@@ -44,9 +44,9 @@
                 <br>
                 Shape Color:
                 <p>
-                    ❤️Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide" />
-                    <br>💚Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" />
-                    <br>💙Blue <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" />
+                    <p>❤️Red..<input type="range" min="0" max="100" value="100" class="slider" id="redSlide" /></p> 
+                    <p>💚Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" /></p> 
+                    <p>💙Blue  <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" /></p> 
                 </p>
                 <!-- size -->
                 <br>
