scene with cubes

--- a/asgn5/asgn5.html
+++ b/asgn5/asgn5.html
@@ -18,9 +18,9 @@
   </head>
   <body>
     <canvas id="c"></canvas>
-    <div id="loading">
+    <!-- <div id="loading">
       <div class="progress"><div class="progressbar"></div></div>
-    </div>
+    </div> -->
 	<script type="module" src="./asgn5.js"></script>
   </body>
 </html>
