--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -11,17 +11,16 @@
 
   <body onload="main()">
     <h1>Assignment 2: Blocky Animal</h1>
-    <p id="fps"></p>
 
     <div class="container">
         <div class="item1">
             <div id="webgl-container" style="position: relative;">
                 <!-- <img src="./images/frame.png" alt="frame" id="frame" width="550px" height="550px" style="position: absolute; top: -80px; left: -80px; z-index: -1;"> -->
-                <img src="./src/frame-left.png" width="28%" style="position: absolute; top: 10px; left: -60px; pointer-events: none;" >
+                <!-- <img src="./src/frame-left.png" width="28%" style="position: absolute; top: 10px; left: -60px; pointer-events: none;" >
                 <img src="./src/frame-right.png" width="30%" style="position: absolute; top: 0px; left: 375px; pointer-events: none;" >
                 <img src="./src/frame-top.png" width="135%" style="position: absolute; top: -100px; left: -60px; pointer-events: none;" >
-                <img src="./src/frame-bottom.png" width="135%" style="position: absolute; top: 350px; left: -50px; pointer-events: none;" >
-                <canvas id="webgl" width="400" height="400" >
+                <img src="./src/frame-bottom.png" width="135%" style="position: absolute; top: 350px; left: -50px; pointer-events: none;" > -->
+                <canvas id="webgl" width="600" height="600" >
                     Please use a browser that supports "canvas"
                 </canvas>
             </div>
@@ -48,14 +47,16 @@
                     <p>❤️Red..<input type="range" min="0" max="100" value="100" class="slider" id="redSlide" /></p> 
                     <p>💚Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide" /></p> 
                     <p>💙Blue  <input type="range"min="0" max="100" value="100" class="slider" id="blueSlide" /></p> 
+                    <p>Camera Angle  <input type="range"min="0" max="90" value="5" class="slider" id="angleSlide" /></p> 
+                    <p id="fps"></p>
                 </p>
                 <!-- size -->
-                <br>
+                <!-- <br>
                 Shape Size: 
-                <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" />
-                <br>(Circle) Segment Count: 
+                <input type="range" min="1" max="100" value="10" class="slider" id="sizeSlide" /> -->
+                <!-- <br>(Circle) Segment Count: 
                 <span id="segmentValue">10</span>
-                <input type="range" min="3" max="20" value="10" class="slider" id="segmentSlide" />
+                <input type="range" min="3" max="20" value="10" class="slider" id="segmentSlide" /> -->
             </div>
 
             <!-- clear button -->
@@ -78,10 +79,11 @@
             </a>
         </div>
     </div>
-    <script src="lib/webgl-utils.js"></script>
-    <script src="lib/webgl-debug.js"></script>
-    <script src="lib/cuon-utils.js"></script>
-    <script src="blockyanimal.js"></script>
+    <script src="./lib/webgl-utils.js" defer></script>
+    <script src="./lib/webgl-debug.js" defer></script>
+    <script src="./lib/cuon-utils.js" defer></script>
+    <script src="./lib/cuon-matrix.js" defer></script>
+    <script src="./blockyanimal.js" defer></script>
     <script src="point.js"></script>
     <script src="triangle.js"></script>
     <script src="circle.js"></script>
