temp, body detached, face done

--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -49,5 +49,6 @@
     <script src="triangle.js"></script>
     <script src="circle.js"></script>
     <script src="cube.js"></script>
+    <script src="triangle3D.js"></script>
   </body>
 </html>
