--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -35,8 +35,9 @@
 
             <!-- slider -->
             <div>
-                <p>Camera Angle  <input type="range"min="-90" max="90" value="5" class="slider" id="angleSlide" /></p> 
                 <p id="fps"></p>
+                <p>Camera Angle  <input type="range"min="-90" max="90" value="5" class="slider" id="angleSlide" /></p> 
+                <p>Capy Body <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
             </div>
         </div>
     </div>
