--- a/asgn2/features.html
+++ b/asgn2/features.html
@@ -8,7 +8,7 @@
 
 <h1>Asgn2: Blocky Animal</h1>
 
-<a href="/Users/daphne/Desktop/cse160/cse160/asgn2/blockyanimal.html">html file with assignment content</a>
+<a href="./asgn2/blockyanimal.html">html file with assignment content</a>
 <br>
 <a href="https://blu-octopus.github.io/cse160/asgn2/blockyanimal">live hosted link</a>
 
