--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -35,9 +35,11 @@
 
             <!-- slider -->
             <div>
+                <p> Click Canvas to Begin</p>
                 <p id="fps"></p>
                 <p>Camera Angle  <input type="range"min="-90" max="90" value="5" class="slider" id="angleSlide" /></p> 
-                <p>Capy Body <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
+                <p>Capybara <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
+                <p>Capybara Head<input type="range"min="0" max="45" value="0" class="slider" id="headSlide" /></p> 
             </div>
         </div>
     </div>
