--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -40,6 +40,7 @@
                 <p>Camera Angle  <input type="range"min="-90" max="90" value="5" class="slider" id="angleSlide" /></p> 
                 <p>Capybara <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
                 <p>Capybara Head<input type="range"min="0" max="45" value="0" class="slider" id="headSlide" /></p> 
+                <p>Capybara Ears<input type="range"min="0" max="45" value="0" class="slider" id="earSlide" /></p> 
             </div>
         </div>
     </div>
