--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -39,8 +39,13 @@
                 <p id="fps"></p>
                 <p>Camera Angle  <input type="range"min="-90" max="90" value="5" class="slider" id="angleSlide" /></p> 
                 <p>Capybara <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
-                <p>Capybara Head<input type="range"min="0" max="45" value="0" class="slider" id="headSlide" /></p> 
-                <p>Capybara Ears<input type="range"min="0" max="45" value="0" class="slider" id="earSlide" /></p> 
+                <p>Capybara Head<input type="range"min="0" max="50" value="0" class="slider" id="headSlide" /></p> 
+                <p>Capybara Ears<input type="range"min="0" max="40" value="0" class="slider" id="earSlide" /></p> 
+                <p>Water<input type="range"min="-30" max="30" value="0" class="slider" id="waterSlide" /></p> 
+                <p> Animation: 
+                    <button id="onBtn"> On </button> 
+                    <button id="offBtn"> Off </button>
+                </p>
             </div>
         </div>
     </div>
