--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -58,6 +58,6 @@
     <script src="triangle.js"></script>
     <script src="circle.js"></script>
     <script src="cube.js"></script>
-    <script src="triangle3D.js"></script>
+    <script src="prism.js"></script>
   </body>
 </html>
