--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -46,6 +46,7 @@
                     <button id="onBtn"> On </button> 
                     <button id="offBtn"> Off </button>
                 </p>
+                <p> Hold Shift + Click for food. </p>
             </div>
         </div>
     </div>
