--- a/asgn2/blockyanimal.html
+++ b/asgn2/blockyanimal.html
@@ -34,6 +34,7 @@
                 <p>Capybara Head<input type="range"min="0" max="50" value="0" class="slider" id="headSlide" /></p> 
                 <p>Capybara Ears<input type="range"min="0" max="40" value="0" class="slider" id="earSlide" /></p> 
                 <p>Water<input type="range"min="-30" max="30" value="0" class="slider" id="waterSlide" /></p> 
+                Orange Count: <button id="orangeBtn" class="mc-button">+</button>
                 <br>
                 <p> Animation: 
                     <button id="onBtn" class="mc-button"> On </button> 
