--- a/asgn3/world.html
+++ b/asgn3/world.html
@@ -10,11 +10,7 @@
   </head>
 
   <body onload="main()">
-    <audio autoplay loop>
-        <source src="./src/Minecraft.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>      
-    <h1>Assignment 2: Blocky Animal</h1>
+    <h1>Assignment 3: Creating a Virtual World</h1>
 
     <div class="container">
         <div class="item1">
