--- a/asgn3/world.html
+++ b/asgn3/world.html
@@ -25,8 +25,8 @@
             <div>
                 <p> Click Canvas to Begin</p><br>
                 <p id="fps"></p>
-                <p>Camera Angle  <input type="range"min="-90" max="90" value="0" class="slider" id="angleSlide" /></p> 
-                <p>Capybara <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
+                <!-- <p>Camera Angle  <input type="range"min="-90" max="90" value="0" class="slider" id="angleSlide" /></p>  -->
+                <!-- <p>Capybara <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
                 <p>Capybara Head<input type="range"min="0" max="50" value="0" class="slider" id="headSlide" /></p> 
                 <p>Capybara Ears<input type="range"min="0" max="40" value="0" class="slider" id="earSlide" /></p> 
                 <p>Water<input type="range"min="-30" max="30" value="0" class="slider" id="waterSlide" /></p> 
@@ -36,7 +36,7 @@
                     <button id="offBtn" class="mc-button"> Off </button>
                 </p>
                 <br>
-                <p> Hold Shift + Click for food. </p>
+                <p> Hold Shift + Click for food. </p> -->
             </div>
         </div>
     </div>
