camera stuff ig

--- a/asgn3b/world.html
+++ b/asgn3b/world.html
@@ -51,6 +51,7 @@
     <script src="circle.js"></script>
     <script src="cube.js"></script>
     <script src="prism.js"></script>
-    <script src="Camera.js"></script>
+    <script src="camera.js"></script>
+    <script src="map.js"></script>
   </body>
 </html>
