--- a/asgn3b/world.html
+++ b/asgn3b/world.html
@@ -51,7 +51,9 @@
     <script src="circle.js"></script>
     <script src="cube.js"></script>
     <script src="prism.js"></script>
+    <script src="cone.js"></script>
     <script src="camera.js"></script>
     <script src="map.js"></script>
+    <script src="onigiri.js"></script>
   </body>
 </html>
