--- a/asgn3b/world.html
+++ b/asgn3b/world.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Blocky Capy Onsen</title>
+    <title>Sushi Platter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
   </head>
 
   <body onload="main()">
-    <h1>Assignment 3: Creating a Virtual World</h1>
+    <h1>Assignment 3B: Creating a Virtual World</h1>
 
     <div class="container">
         <div class="item1">
@@ -19,24 +19,34 @@
                     Please use a browser that supports "canvas"
                 </canvas>
             </div>
+            <audio id="ambientSound" src="src/restaurant.mp3" preload="auto"></audio>
         </div>
 
         <div class="item">
             <div>
-                <p> Click Canvas to Begin</p><br>
+                <p><b><u>Controls</u></b> </p>
                 <p id="fps"></p>
-                <!-- <p>Camera Angle  <input type="range"min="-90" max="90" value="0" class="slider" id="angleSlide" /></p>  -->
-                <!-- <p>Capybara <input type="range"min="-10" max="20" value="5" class="slider" id="bodySlide" /></p> 
-                <p>Capybara Head<input type="range"min="0" max="50" value="0" class="slider" id="headSlide" /></p> 
-                <p>Capybara Ears<input type="range"min="0" max="40" value="0" class="slider" id="earSlide" /></p> 
-                <p>Water<input type="range"min="-30" max="30" value="0" class="slider" id="waterSlide" /></p> 
-                
-                <p> Animation: 
-                    <button id="onBtn" class="mc-button"> On </button> 
-                    <button id="offBtn" class="mc-button"> Off </button>
+                <p> Use WASD to move around, QE to turn left and right.</p>
+                <p> Use mouse to click and drag around the world.</p>
+                <br>
+                <p><b><u>Plate of Sushi</u></b> </p>
+                <p> 
+                    Here I present to you a plate of sushi, with <i>luscious tuna, vibrant salmon,</i> 
+                    and <i>perfectly salted onigiri</i>. 
+                    Together, they offering a taste of harmony and ancient sea magic in every bite.
                 </p>
                 <br>
-                <p> Hold Shift + Click for food. </p> -->
+                <p><b><u>Wow Factor</u></b> </p>
+                <p> Dear grader I found this assignment to be very challenging. 
+                    I notice that simply having static objects in a scene makes it look really fake and dead.
+                    So I added slight movements to my cube objects to make them look more alive.
+                    <br>
+                    <br>
+                    I tried implementing a system where that you can click on a sushi and it will disappear,
+                    but I couldn't get it to work. I will continue to work on it and hopefully get it to work.
+                    I faced difficulty in understanding how to add in a position tracker for each object.
+                </p>
+
             </div>
         </div>
     </div>
@@ -54,6 +64,5 @@
     <script src="cone.js"></script>
     <script src="camera.js"></script>
     <script src="map.js"></script>
-    <script src="onigiri.js"></script>
   </body>
 </html>
