--- a/asgn4/world.html
+++ b/asgn4/world.html
@@ -10,11 +10,11 @@
   </head>
 
   <body onload="main()">
-    <h1>Assignment 4: </h1>
-    <!-- <audio autoplay loop>
+    <h1>Assignment 4: Lighting</h1>
+    <audio autoplay loop>
         <source src="src/restaurant.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-    </audio>   -->
+    </audio>  
 
     <div class="container">
         <div class="item1">
